added the basic fields of the form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
 <body>
-
+  <h2>Adoption Form</h2>
+  <form method="POST" autocomplete="on" action="#null" >
+    <fieldset>
+      <div>
+        <label>First Name: <input type="text" name="first_name_field"></label>
+        <label>Last Name: <input type="text" name="last_name_field"></label>
+        <label>Email Address: <input type="email" name="email_field"></label>
+        <label>Phone Number: <input type="number" name="phone_field"></label>
+      </div>
+    </fieldset>
+  </form>
 </body>
 </html>
