added each label in a div

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     <fieldset>
       <div>
         <label>First Name: <input type="text" name="first_name_field"></label>
+      </div>
+      <div>
         <label>Last Name: <input type="text" name="last_name_field"></label>
+      </div>
+      <div>
         <label>Email Address: <input type="email" name="email_field"></label>
+      </div>
+      <div>
         <label>Phone Number: <input type="number" name="phone_field"></label>
       </div>
     </fieldset>
