added id tags and color for the backgrounds and text

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" media="screen" href="css/reset.css" />
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
-<body>
+<body id="form">
   <h2>Adoption Form</h2>
   <form method="POST" autocomplete="on" action="#null" >
-    <fieldset>
+    <fieldset id="form_box">
       <div>
         <label>First Name: <input type="text" name="first_name_field"></label>
       </div>
