--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <title>Lab 2</title>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link rel="stylesheet" media="screen" href="css/reset.css" />
-  <link rel="stylesheet" media="screen" href="css/screen.css" />
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body id="form">
   <h2>Adoption Form</h2>
