added color and background color

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <title>Lab 2</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="form">
+<body>
   <h2>Adoption Form</h2>
   <form method="POST" autocomplete="on" action="#null" >
-    <fieldset id="form_box">
+    <fieldset>
       <div>
         <label>First Name: <input type="text" name="first_name_field"></label>
       </div>
