changed the color and added a div around the form body

--- a/index.html
+++ b/index.html
@@ -7,22 +7,26 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h2>Adoption Form</h2>
-  <form method="POST" autocomplete="on" action="#null" >
-    <fieldset>
-      <div>
-        <label>First Name: <input type="text" name="first_name_field"></label>
-      </div>
-      <div>
-        <label>Last Name: <input type="text" name="last_name_field"></label>
-      </div>
-      <div>
-        <label>Email Address: <input type="email" name="email_field"></label>
-      </div>
-      <div>
-        <label>Phone Number: <input type="number" name="phone_field"></label>
-      </div>
-    </fieldset>
+  <div id="title">
+    <h2>Adoption Form</h2>
+  </div>
+  <form method="POST" autocomplete="on" action="#null">
+    <div id="form_body">
+      <fieldset>
+        <div>
+          <label>First Name: <input type="text" name="first_name_field"></label>
+        </div>
+        <div>
+          <label>Last Name: <input type="text" name="last_name_field"></label>
+        </div>
+        <div>
+          <label>Email Address: <input type="email" name="email_field"></label>
+        </div>
+        <div>
+          <label>Phone Number: <input type="number" name="phone_field"></label>
+        </div>
+      </fieldset>
+    </div>
   </form>
 </body>
 </html>
