added div's on the label fields and centered the title

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <form method="POST" autocomplete="on" action="#null">
     <div id="form_body">
       <fieldset>
-        <div>
+        <div id="first_name_field">
           <label>First Name: <input type="text" name="first_name_field"></label>
         </div>
-        <div>
+        <div id="last_name_field">
           <label>Last Name: <input type="text" name="last_name_field"></label>
         </div>
-        <div>
+        <div id="email_field">
           <label>Email Address: <input type="email" name="email_field"></label>
         </div>
-        <div>
+        <div id="phone_field">
           <label>Phone Number: <input type="number" name="phone_field"></label>
         </div>
       </fieldset>
