changed the font of the title and centered the button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Lab 2</title>
   <meta charset="utf-8" />
+  <link href="https://fonts.googleapis.com/css?family=Modak&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
