--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
 <head>
-  <title>Lab 2</title>
+  <title>Project One</title>
   <meta charset="utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Modak&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
