added images to to the full screen website

--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
     </div>
     <input type="submit" value="Adopt">
   </form>
+  <div id="img">
+    <img src="images/puppy_dog_left.jpg" alt="Image 1 Of A Sad Puppy" id="imgleft">
+    <img src="images/puppy_dog_right.jpeg" alt="Image 2 Of A Sad Puppy"  id="imgright">
+  </div>
 </body>
 </html>
