linked the js and added the base code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Modak&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/script.js"></script>
 </head>
 <body>
   <div id="title">
