--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       </fieldset>
     </div>
-    <input type="submit" value="Adopt">
+    <input id="input" type="submit" value="Adopt">
   </form>
   <div id="img">
     <img src="images/puppy_dog_left.jpg" alt="Image 1 Of A Sad Puppy" id="imgleft">
